Update favicon and manifest.json

--- a/admin/conf.ini
+++ b/admin/conf.ini
@@ -1,53 +1,64 @@
-lang=en,ru
+lang = en,ru
 
-password=6fbde3e2135f10ee603ff6f59bc97d4b0a4d4e9a
+password = 6fbde3e2135f10ee603ff6f59bc97d4b0a4d4e9a
 
-session=
+session = 389c1a081bc2283d2d3072390a6266f403f9469c
 
-pass_complexity=500000
+pass_complexity = 500000
 
-pass_complexity_js=15000
+pass_complexity_js = 14982
 
-auth_time=
+auth_time = 1656779657
 
-auth_error_time=
+auth_error_time = 
 
-auth_error_list=
+auth_error_list = 
 
-auth_error_limit=5
+auth_error_limit = 5
 
-auth_lockout_duration=1
+auth_lockout_duration = 1
 
-auth_session_reset=60
+auth_session_reset = 60
 
-auth_bot_filter=1
+auth_bot_filter = 1
 
-logout_to_site=0
+logout_to_site = 0
 
-site_scripts=1
+site_scripts = 1
 
-site_styles=1
+site_styles = 1
 
-code_redraw_delay=200
+link_replacing = 1
 
-code_undo_limit=50
+name_correction = 1
 
-code_highlighting=1
+image_rewriting = 0
 
-allowed_ext=
+code_redraw_delay = 200
 
-visual_ext=html,htm,shtml,shtm,stm,php
+code_undo_limit = 50
 
-editable_ext=html,htm,shtml,shtm,stm,php,css,js,xml,txt
+code_highlighting = 1
 
-default_file=index.html
+allowed_ext = 
 
-folder_size=1
+visual_ext = html,htm,shtml,shtm,stm,php
 
-document_root=
+editable_ext = html,htm,shtml,shtm,stm,php,css,js,xml,txt
 
-update_final=1
+editable_attributes = href,src,alt,title,width,height,colspan,rowspan,value,placeholder,maxlength,cite,datetime,srcset,sizes,poster,data
 
-update_beta=0
+default_file = index.html
 
-cache=
+folder_size = 1
+
+recovery_points = 5
+
+document_root = 
+
+update_final = 0
+
+update_beta = 0
+
+cache = 
+
