--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "icons": [
       {
         "src": "img/icon/favicon-192x192.png",
-        "sizes": "192x192"
+        "sizes": "192x192",
+        "type": "image/png"
       }
     ]
   }
@@ -36,11 +37,12 @@
    "background_color": "#ffffff",
    "description": "Транскрибация аудио и видео в текст. Расшифровка речи, расстановка знаков препинания, редактирование в браузере, экспорт в *.docx, *.srt",
    "dir": "ltr",
+   "lang": "ru",
    "display": "standalone",
    "name": "Teamlogs",
+   "short_name": "Teamlogs",
    "orientation": "any",
    "scope": "/",
-   "short_name": "Teamlogs",
    "start_url": "/",
    "theme_color": "#ffffff",
    "categories": [ "Servise" ],
