--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,23 +6,24 @@
       "commonjs": true,
       "node": true
    },
+   "extends": ["eslint:recommended", "prettier"],
    "plugins": ["prettier"],
-   "extends": ["eslint:recommended", "plugin:prettier/recommended"],
    "parserOptions": {
-      "ecmaVersion": 12,
+      "ecmaVersion": 2020,
       "sourceType": "module"
    },
+
    "rules": {
-      "prettier/prettier": "error",
-      "typeof": false,
+      "no-undef": "off",
       "semi": "error",
-      "no-console": "error",
+      "no-console": "warn",
       "no-debugger": "error",
       "no-plusplus": "off",
       "no-var": "error",
       "eol-last": "off",
       "arrow-body-style": ["error", "as-needed"],
-      "comma-dangle": "error",
+      "prefer-arrow-callback": "off",
+      "comma-dangle": "off",
       "no-param-reassign": "off",
       "constructor-super": "error",
       "no-unused-expressions": "error",
