--- a/.prettierignore
+++ b/.prettierignore
@@ -2,13 +2,14 @@ admin/
 build/
 dist/
 public/
+video/
 img/
 fonts/
+node_modules/
 package-lock.json
 **/.git
 **/.svn
 **/.hg
-**/node_modules
 .gitignore
 .eslintignore
 .gitkeep
