--- a/.htmlhintrc
+++ b/.htmlhintrc
@@ -9,7 +9,7 @@
    "attr-no-unnecessary-whitespace": true,
    "attr-unsafe-chars": true,
    "attr-value-double-quotes": true,
-   "attr-value-not-empty": false,
+   "attr-value-not-empty": true,
    "attr-sorted": false,
    "attr-whitespace": true,
    "alt-require": true,
